[tagpy @ Arch-1:inform@tiker.net--2005-public%tagpy--mainline--0--patch-5] added "and writing" to the README.

--- a/README
+++ b/README
@@ -13,8 +13,9 @@ Just like TagLib, TagPy can:
 - access APE tags in Musepack and MP3 files.
 
 All these have their own specific interfaces, but TagLib's generic tag
-reading mechanism is also supported. You can find examples in the test/
-directory.
+reading and writing mechanism is also supported. 
+
+You can find examples in the test/ directory.
 
 Andreas Kloeckner <inform@tiker.net>
 
